@@ -1008,7 +1008,7 @@ print_variable (v, prefix)
     {
       register char *p;
 
-      printf ("%s %s= ", v->name, v->recursive ? "" : ":");
+      printf ("%s %s= ", v->name, v->recursive ? v->append ? "+" : "" : ":");
 
       /* Check if the value is just whitespace.  */
       p = next_token (v->value);
